--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@prismicio/client": "^7.19.2",
+    "@prismicio/next": "^2.0.1",
+    "@prismicio/react": "^3.2.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.535.0",
     "next": "15.4.4",
@@ -20,12 +24,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@slicemachine/adapter-next": "^0.3.82",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
+    "slice-machine-ui": "^2.18.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
